--- a/readthedocsext/theme/templates/semantic-ui/fields/base.html
+++ b/readthedocsext/theme/templates/semantic-ui/fields/base.html
@@ -4,7 +4,12 @@
   <{% if tag %}{{ tag }}{% else %}div{% endif %} id="div_{{ field.auto_id }}" class="{% if not field|is_checkbox %}{% if field.field.required %}required{% endif %}{% if field.errors %} error{% endif %}{% if 'form-horizontal' in form_class %} inline{% endif %} field{% endif %}{% if wrapper_class %} {{ wrapper_class }}{% endif %}{% if field.css_classes %} {{ field.css_classes }}{% endif %}">
   {% block field-label %}
     {% if field.label and form_show_labels %}
-      <label for="{{ field.id_for_label }}" class="ui {{ label_class }}"{% if field.help_text %} data-html="{{ field.help_text }}" data-bind="semanticui: {popup: {hoverable: true}}"{% endif %}>
+      {% comment %}
+      A help text usually contains HTML to be included as is, and it's marked as safe.
+      Here we are including it in a data attribute, so we need to escape it.
+      We use force_escape, since escape skips strings marked as safe.
+      {% endcomment %}
+      <label for="{{ field.id_for_label }}" class="ui {{ label_class }}"{% if field.help_text %} data-html="{{ field.help_text|force_escape }}" data-bind="semanticui: {popup: {hoverable: true}}"{% endif %}>
         {{ field.label|safe }}
         {% if field.help_text %}
           <i class="ui grey fa-duotone fa-circle-question icon"></i>
