--- a/readthedocsext/theme/templates/base.html
+++ b/readthedocsext/theme/templates/base.html
@@ -54,8 +54,8 @@
           {% include "includes/utils/messages.html" %}
 
           {% if user.is_impersonate %}
-            <div class="ui small basic fitted center aligned segment">
-              <i class="fad fa-warning violet icon"></i>
+            <div class="ui small center aligned warning message">
+              <i class="fad fa-warning icon"></i>
               Be careful!
               <strong>
                 You are impersonating
