Impersonate: add link to stop impersonating the user (#355)
* Impersonate: add link to stop impersonating the user

Closes https://github.com/readthedocs/readthedocs-corporate/issues/1789

* Update readthedocsext/theme/templates/base.html

Co-authored-by: Anthony <aj@ohess.org>

* Move the notification to the beginning of the block

---------

Co-authored-by: Anthony <aj@ohess.org>

--- a/readthedocsext/theme/templates/base.html
+++ b/readthedocsext/theme/templates/base.html
@@ -51,6 +51,18 @@
     {% block content-wrapper %}
       <div class="ui very padded container">
         {% block notifications %}
+          {% if user.is_impersonate %}
+            <div class="ui small center aligned warning message">
+              <i class="fad fa-warning icon"></i>
+              Be careful!
+              <strong>
+                You are impersonating
+              </strong>
+              the user "<em>{{ request.user.username }}</em>".
+              <a href="{% url 'impersonate-stop' %}">Stop impersonating</a> when you are finished.
+            </div>
+          {% endif %}
+
           {% include "includes/utils/messages.html" %}
         {% endblock notifications %}
 
