--- a/readthedocsext/theme/templates/organizations/partials/team_member_list.html
+++ b/readthedocsext/theme/templates/organizations/partials/team_member_list.html
@@ -26,16 +26,20 @@
 {% endblock %}
 
 {% block list_placeholder_icon_class %}fad fa-user-plus icon{% endblock %}
-{% block list_placeholder_header %}
-  {% blocktrans trimmed %}
-    No team members match your filter criteria.
-  {% endblocktrans %}
-{% endblock list_placeholder_header %}
-{% block list_placeholder_text %}
+{% block list_placeholder_header_filtered %}
+  {% trans "No matching team members found" %}
+{% endblock list_placeholder_header_filtered %}
+{% block list_placeholder_header_empty %}
+  {% trans "Team has no members" %}
+{% endblock list_placeholder_header_empty %}
+{% block list_placeholder_text_empty %}
   {% if request.user|is_admin:organization %}
-    <div class="ui primary button">{% trans "Invite member" %}</div>
+    {% url "organization_team_member_add" organization.slug team.slug as create_url %}
+    <a href="{{ create_url }}" class="ui primary button">
+      {% trans "Invite member" %}
+    </a>
   {% endif %}
-{% endblock list_placeholder_text %}
+{% endblock list_placeholder_text_empty %}
 
 {% block list_item_right_buttons %}
 {% endblock list_item_right_buttons %}
