--- a/readthedocsext/theme/templates/organizations/partials/team_list.html
+++ b/readthedocsext/theme/templates/organizations/partials/team_list.html
@@ -27,9 +27,9 @@
 {% endblock list_placeholder_header_empty %}
 {% block list_placeholder_text_empty %}
   {% if request.user|is_admin:organization %}
-    <div href="{% url "organization_team_add" organization.slug  %}" class="ui primary button">
+    <a href="{% url "organization_team_add" organization.slug  %}" class="ui primary button">
       {% trans "Add team" %}
-    </div>
+    </a>
   {% endif %}
 {% endblock list_placeholder_text_empty %}
 
