--- a/readthedocsext/theme/templates/projects/partials/project_list.html
+++ b/readthedocsext/theme/templates/projects/partials/project_list.html
@@ -26,7 +26,7 @@
   {% trans "You don't have any projects configured yet" %}
 {% endblock list_placeholder_header_empty %}
 {% block list_placeholder_text_empty %}
-  <a href="https://docs.readthedocs.io/pages/tutorial/index.html" class="ui primary button">
+  <a href="https://docs.readthedocs.io/page/tutorial/" class="ui primary button">
     {% trans "Learn how to get started" %}
   </a>
 {% endblock list_placeholder_text_empty %}
