Projects: disable elipsis when user doesn't have permissions
Show the elipsis as disabled when the user doesn't have permissions.
Follows the same pattern with the documentation/book icon that is disabled when
there is no successfull build yet.

--- a/readthedocsext/theme/templates/projects/partials/project_list.html
+++ b/readthedocsext/theme/templates/projects/partials/project_list.html
@@ -59,7 +59,12 @@
           </a>
         </div>
       </button>
+    {% else %}
+      <button class="ui disabled dropdown button">
+        <i class="fa-solid fa-ellipsis icon"></i>
+      </button>
     {% endif %}
+
   </div>
 {% endblock list_item_right_menu %}
 
