Search Analytics: show results and queries
Improve how we show the results the query returned and also how many times users
have searched for that particular query)

--- a/readthedocsext/theme/templates/projects/partials/edit/search_query_list.html
+++ b/readthedocsext/theme/templates/projects/partials/edit/search_query_list.html
@@ -54,17 +54,19 @@
 {% block list_item_right_menu %}
   <div class="ui right floated text menu">
     <div class="item">
-      {% blocktrans trimmed count num=object.1 %}
-        {{ num }} result
-      {% plural %}
-        {{ num }} results
-      {% endblocktrans %}
+      {{ object.1 }}
     </div>
   </div>
 {% endblock list_item_right_menu %}
 
 {% block list_item_header %}
   {{ object.0 }}
+  <div class="sub header">
+    <label>
+      {% blocktrans trimmed count num=object.2 %}{{ num }} result{% plural %}{{ num }} results{% endblocktrans %}
+    </label>
+  </div>
+
 {% endblock list_item_header %}
 
 {% block list_item_meta %}
