Feedback from review

--- a/readthedocsext/theme/templates/projects/partials/edit/search_query_list.html
+++ b/readthedocsext/theme/templates/projects/partials/edit/search_query_list.html
@@ -54,7 +54,7 @@
 {% block list_item_right_menu %}
   <div class="ui right floated text menu">
     <div class="item">
-      {{ object.1 }}
+      {% blocktrans trimmed count num=object.1 %}{{ num }} query{% plural %}{{ num }} queries{% endblocktrans %}
     </div>
   </div>
 {% endblock list_item_right_menu %}
@@ -62,9 +62,7 @@
 {% block list_item_header %}
   {{ object.0 }}
   <div class="sub header">
-    <label>
-      {% blocktrans trimmed count num=object.2 %}{{ num }} result{% plural %}{{ num }} results{% endblocktrans %}
-    </label>
+    {% blocktrans trimmed count num=object.2 %}{{ num }} result{% plural %}{{ num }} results{% endblocktrans %}
   </div>
 
 {% endblock list_item_header %}
