Add project: highlight yaml examples
I used `highlight.js` to highlight the examples when importing a project.
It requires importing a CSS file that I'm not sure where to put it yet.

https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/dark.min.css

Besides, I need to know where to place the small chunk of JS code that I added
to make this work.

Based on #368

--- a/readthedocsext/theme/templates/projects/import_config.html
+++ b/readthedocsext/theme/templates/projects/import_config.html
@@ -37,7 +37,7 @@
       <a class="ui top right attached icon label" href="#" data-clipboard-target="#project-create-sample-sphinx">
         <i class="fas fa-copy icon"></i>
       </a>
-      <code class="highlight">
+      <code class="language-yaml highlight">
               <pre id="project-create-sample-sphinx">
 # Read the Docs configuration file
 # See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
@@ -237,7 +237,7 @@ build:
       <a class="ui top right attached icon label" href="#" data-clipboard-target="#project-create-sample-others">
         <i class="fas fa-copy icon"></i>
       </a>
-      <code class="highlight">
+      <code class="language-yaml highlight">
               <pre id="project-create-sample-others">
 # Read the Docs configuration file
 # See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
