--- a/src/css/site.less
+++ b/src/css/site.less
@@ -151,3 +151,6 @@
 & {
   @import "fomantic-ui-less/definitions/modules/transition.less";
 }
+& {
+  @import "src/css/components/highlight.less";
+}
