HTML structure for highlight

--- a/readthedocsext/theme/templates/projects/import_config.html
+++ b/readthedocsext/theme/templates/projects/import_config.html
@@ -72,9 +72,9 @@ sphinx:
 # python:
 #    install:
 #    - requirements: docs/requirements.txt
-              </pre>
     </code>
-  </div>
+              </pre>
+    </div>
   </div>
 
   <div class="ui bottom attached tab segment" data-tab="mkdocs">
@@ -201,8 +201,8 @@ build:
       <a class="ui top right attached icon label" href="#" data-clipboard-target="#project-create-sample-jekyll">
         <i class="fas fa-copy icon"></i>
       </a>
-      <code class="language-yaml highlight">
-              <pre id="project-create-sample-jekyll">
+      <pre>
+          <code id="project-create-sample-jekyll" class="language-yaml highlight">
 # Read the Docs configuration file
 # See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
 
@@ -226,8 +226,8 @@ build:
     - bundle install
     # Build the site and save generated files into Read the Docs directory
     - jekyll build --destination $READTHEDOCS_OUTPUT/html
-              </pre>
-      </code>
+          </code>
+      </pre>
     </div>
   </div>
 
