--- a/readthedocsext/theme/templates/projects/import_config.html
+++ b/readthedocsext/theme/templates/projects/import_config.html
@@ -21,7 +21,7 @@
     <a href="https://docs.readthedocs.io/page/config-file/index.html" target="_blank">learn how to write your own</a>.
   </p>
 
-  <div class="ui top attached tabular menu">
+  <div class="ui top attached stackable tabular menu">
     <div class="active item" data-tab="sphinx">Sphinx</div>
     <div class="item" data-tab="mkdocs">MkDocs</div>
     <div class="item" data-tab="pelican">Pelican</div>
