--- a/readthedocsext/theme/templates/projects/import_config.html
+++ b/readthedocsext/theme/templates/projects/import_config.html
@@ -27,7 +27,7 @@
     <div class="item" data-tab="pelican">Pelican</div>
     <div class="item" data-tab="docusaurus">Docusaurus</div>
     <div class="item" data-tab="jekyll">Jekyll</div>
-    <div class="item" data-tab="others">Others</div>
+    <div class="item" data-tab="others">{% trans "Others" %}</div>
   </div>
   <div class="ui bottom attached active tab segment" data-tab="sphinx">
     <div class="ui mini padded inverted scrolling segment">
