--- a/readthedocsext/theme/templates/organizations/organization_form.html
+++ b/readthedocsext/theme/templates/organizations/organization_form.html
@@ -84,8 +84,8 @@
 
         <div class="ui tab" data-tab="registered">
           {% blocktrans %}
-            If you are having trouble joining an existing organization,
-            contact one of your organization's owners and request an invite.
+            We weren't able to join you automatically to any organization.
+            Contact one of your organization's owners and request an invite.
             They should email you a link that you can use to join.
           {% endblocktrans %}
         </div>
